<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogfon"
    android:background="@drawable/previewbackground"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/button_close"
            android:text="X"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_gravity="end"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level1welcome"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/level1description"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_continue"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_marginTop="10dp"
            android:text="@string/textcontinue"
            android:textColor="@color/black95"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>