<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/universal_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/universal_background" />
    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/line0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="right">

            <ImageView
                android:id="@+id/imageMoney"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/money" />

            <TextView
                android:id="@+id/text_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="15dp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_stroke_white_press_blue"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_levels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/level"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="100"/>

        <LinearLayout
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/leftButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="50"
                android:background="@drawable/button_stroke_white_press_blue"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/left"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/rightButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="50"
                android:background="@drawable/button_stroke_white_press_blue"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/right"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
