<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/line0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="right">

        <ImageView
            android:id="@+id/imageMoney"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@drawable/money" />

        <TextView
            android:id="@+id/text_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/main_img_ship"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/main_img_ship" />

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_weight="1"
            android:text="@string/start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black95"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/buttonShop"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_weight="1"
            android:text="@string/shop"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black95"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_stroke_black95_press_white"
            android:layout_weight="1"
            android:text="@string/settings"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black95"
            android:textSize="24sp"/>
    </LinearLayout>

</RelativeLayout>